--- a/tests/fixtures/complex.html
+++ b/tests/fixtures/complex.html
@@ -1,9 +1,9 @@
-<!-- BEGIN BLOCK_1 -->
+<!-- [BLOCK_1] -->
 	Block 1 content.
-	<!-- BEGIN NESTED_BLOCK_1 -->
+	<!-- [NESTED_BLOCK_1] -->
 		<!-- INCLUDE placeholders-1.html --> Nested block 1 content.
-	<!-- END NESTED_BLOCK_1 -->
-<!-- END BLOCK_1 -->
-<!-- BEGIN BLOCK_2 -->
+	<!-- [/NESTED_BLOCK_1] -->
+<!-- [/BLOCK_1] -->
+<!-- [BLOCK_2] -->
 Block 2 content.
-<!-- END BLOCK_2 -->
+<!-- [/BLOCK_2] -->
