--- a/tests/fixtures/layout-1-user.html
+++ b/tests/fixtures/layout-1-user.html
@@ -1,8 +1,8 @@
-<!-- INCLUDE layout-1.html -->
-<!-- REPLACE block_1 -->
+<!-- include layout-1.html -->
+<!-- replace block_1 -->
 Replace block 1
-<!-- /REPLACE -->
+<!-- /replace -->
 
-<!-- REPLACE block_2 -->
+<!-- replace block_2 -->
 Replace block 2
-<!-- /REPLACE -->
+<!-- /replace -->
