--- a/tests/fixtures/replace-block-1.html
+++ b/tests/fixtures/replace-block-1.html
@@ -1,5 +1,5 @@
-<!-- INCLUDE block-1.html -->
+<!-- include block-1.html -->
 
-<!-- REPLACE BLOCK_1 -->
+<!-- replace BLOCK_1 -->
 	Content was replaced.
-<!-- /REPLACE -->
+<!-- /replace -->
