--- a/tests/fixtures/blocks-2.html
+++ b/tests/fixtures/blocks-2.html
@@ -1,6 +1,6 @@
-<!-- BEGIN BLOCK_1 -->
+<!-- [BLOCK_1] -->
 Block 1 content.
-<!-- END BLOCK_1 -->
-<!-- BEGIN BLOCK_2 -->
+<!-- [/BLOCK_1] -->
+<!-- [BLOCK_2] -->
 Block 2 content.
-<!-- END BLOCK_2 -->
+<!-- [/BLOCK_2] -->
