--- a/tests/fixtures/layout-1.html
+++ b/tests/fixtures/layout-1.html
@@ -1,3 +1,3 @@
-<!-- BEGIN block_1 --><!-- END block_1 -->
+<!-- [block_1] --><!-- [/block_1] -->
 Separate content.
-<!-- BEGIN block_2 --><!-- END block_2 -->
+<!-- [block_2] --><!-- [/block_2] -->
