--- a/tests/fixtures/nested-blocks.html
+++ b/tests/fixtures/nested-blocks.html
@@ -1,11 +1,11 @@
-<!-- BEGIN BLOCK_1 -->
+<!-- [BLOCK_1] -->
 	Block 1 content.
 
-<!-- BEGIN NESTED_BLOCK_1 -->
+<!-- [NESTED_BLOCK_1] -->
 	Nested block 1 content.
-<!-- END NESTED_BLOCK_1 -->
-<!-- END BLOCK_1 -->
+<!-- [/NESTED_BLOCK_1] -->
+<!-- [/BLOCK_1] -->
 
-<!-- BEGIN BLOCK_2 -->
+<!-- [BLOCK_2] -->
 Block 2 content.
-<!-- END BLOCK_2 -->
+<!-- [/BLOCK_2] -->
